--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,18 +6,10 @@
   </p>
   <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+<section layout="row" layout-sm="column" layout-align="center center">
+  <md-button class="md-raised">Button</md-button>
+  <md-button class="md-raised md-primary">Primary</md-button>
+  <md-button ng-disabled="true" class="md-raised md-primary">Disabled</md-button>
+  <md-button class="md-raised md-warn">Warn</md-button>
+  <div class="label">Raised</div>
+</section>
